clarify that JVM version is more suitable as a server